--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     ],
     "require": {
         "php": ">7.1.3",
-        "illuminate/console": "^5.8",
-        "illuminate/support": "^5.8",
+        "illuminate/console": "^5.8|^6.0",
+        "illuminate/support": "^5.8|^6.0",
         "nikic/php-parser": "^4.2",
         "symfony/finder": "^4.2"
     },
