--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": ">7.1.3",
         "illuminate/console": "^5.8|^6.0",
         "illuminate/support": "^5.8|^6.0",
+        "mcmatters/composer-helper": "dev-master",
         "nikic/php-parser": "^4.2",
         "symfony/finder": "^4.2"
     },
