--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     ],
     "require": {
         "php": ">7.1.3",
-        "illuminate/console": "^5.8|^6.0",
-        "illuminate/support": "^5.8|^6.0",
+        "illuminate/console": "^5.8|^6.0|^7.0",
+        "illuminate/support": "^5.8|^6.0|^7.0",
         "mcmatters/composer-helper": "dev-master",
         "nikic/php-parser": "^4.2",
-        "symfony/finder": "^4.2"
+        "symfony/finder": "^4.2|^5.0"
     },
     "autoload": {
         "psr-4": {
