--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
         }
     ],
     "require": {
-        "php": ">7.1.3",
-        "illuminate/console": "^5.8 || ^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/support": "^5.8 || ^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "mcmatters/composer-helper": "dev-master",
+        "php": ">=8.1",
+        "illuminate/console": "^10.0",
+        "illuminate/support": "^10.0",
+        "mcmatters/composer-helper": "^0.1",
         "nikic/php-parser": "^4.2",
         "symfony/finder": "^4.2 || ^5.0 || ^6.0"
     },
