--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "php": ">=8.1",
         "illuminate/console": "^10.0",
         "illuminate/support": "^10.0",
-        "mcmatters/composer-helper": "^0.1",
-        "nikic/php-parser": "^4.2",
+        "mcmatters/composer-helper": "^0.3",
+        "nikic/php-parser": "^4.2 || ^5.0",
         "symfony/finder": "^4.2 || ^5.0 || ^6.0"
     },
     "autoload": {
